# power-flow-solver

./: CMakeLists.txt  README.md
include/: matpower.h  types.h
include/cases/: fivebus_maple.h  ieee33.h  matpower_case141.h  matpower_case22.h  matpower_case85.h
include/network/: network.h
include/solver/: gaussseidel.h  genetic.h  newtonraphson.h  perturbation.h
lib/: CMakeLists.txt
lib/network/: CMakeLists.txt  network.cc
lib/solver/: CMakeLists.txt  gaussseidel.cc  genetic.cc  newtonraphson.cc  perturbation.cc
src/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  fivebus_test.cc
